Bug 7606 - The SiS DRI driver isn't compiled as a module during the kernel 2.6.19 compilation
Summary: The SiS DRI driver isn't compiled as a module during the kernel 2.6.19 compil...
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-30 20:34 UTC by Daniel Goes
Modified: 2006-12-03 09:40 UTC (History)
0 users

See Also:
Kernel Version: 2.6.19
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Daniel Goes 2006-11-30 20:34:55 UTC
Most recent kernel where this bug did *NOT* occur: 2.6.18.1
Distribution: Arch Linux
Hardware Environment:
Software Environment:

Linux toscohost 2.6.18-ck #1 SMP PREEMPT Mon Nov 20 11:37:19 GMT 2006 i686
Pentium III (Coppermine) GenuineIntel GNU/Linux

Gnu C                  4.1.2
Gnu make               3.81
binutils               2.17
util-linux             2.12r
mount                  2.12r
module-init-tools      3.2.2
e2fsprogs              1.39
reiserfsprogs          3.6.19
PPP                    2.4.4
Linux C Library        > libc.2.5
Dynamic linker (ldd)   2.5
Linux C++ Library      6.0.8
Procps                 3.2.7
Net-tools              1.60
Kbd                    1.12
Sh-utils               6.6
udev                   103
Modules Loaded         isofs zlib_inflate sis drm ipv6 bsd_comp ipt_LOG
xt_tcpudp iptable_filter ip_tables x_tables ppp_synctty ppp_async crc_ccitt
nls_cp437 vfat fat tsdev snd_seq_oss snd_seq_midi_event snd_seq snd_pcm_oss
snd_mixer_oss analog ns558 ppdev lp snd_mpu401 psmouse serio_raw snd_trident
gameport snd_util_mem snd_mpu401_uart snd_rawmidi snd_seq_device snd_intel8x0m
snd_ac97_codec snd_ac97_bus snd_pcm snd_timer snd soundcore snd_page_alloc
parport_pc parport ppp_generic slhc rtc shpchp pci_hotplug pcspkr ohci_hcd
i2c_sis630 i2c_core sis900 mii sis_agp agpgart evdev usbcore reiserfs ide_cd
cdrom ide_disk sis5513 generic ide_core


Problem Description: During the modules compilation of the kernel 2.6.19 the
following message appears and the compilation stops:

Building modules, stage 2.
  MODPOST 267 modules
WARNING: "drm_sman_set_manager" [drivers/char/drm/sis.ko] undefined!
make[1]: *** [__modpost] Error 1
make: *** [modules] Error 2


Steps to reproduce:
1- In the Character Devices section, set "Direct Rendering Manager" and "SiS
video cards" as a module.
2- Save the kernel configuration and exit of the menuconfig
3- On the console, run make bzImage
4- When the bzImage is completed, run make modules
5- In this stage, notice the error message above appears.
Comment 1 Andrew Morton 2006-11-30 20:49:21 UTC
Does this fix?

--- a/drivers/char/drm/drm_sman.c~drm-sis-linkage-fix
+++ a/drivers/char/drm/drm_sman.c
@@ -162,6 +162,7 @@ drm_sman_set_manager(drm_sman_t * sman, 
 
 	return 0;
 }
+EXPORT_SYMBOL(drm_sman_set_manager);
 
 static drm_owner_item_t *drm_sman_get_owner_item(drm_sman_t * sman,
 						 unsigned long owner)
_


Note You need to log in before you can comment on or make changes to this bug.